[gd_scene load_steps=3 format=2]

[ext_resource path="res://Weapon/PickUpParent.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=3]

[node name="PickUpArea" type="Area"]
collision_layer = 0
collision_mask = 6
monitoring = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_PickUpArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_PickUpArea_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_PickUpArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
